--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "simple-react-datetimepicker",
   "description": "",
-  "version": "0.0.1",
+  "version": "1.0.4",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "homepage": "",
   "repository": {
     "type": "git",
-    "url": "",
+    "url": "git+https://github.com/Sathish0225/simple-react-datetimepicker.git",
     "directory": "simple-react-datetimepicker"
   },
   "scripts": {
@@ -36,13 +36,16 @@
     "@babel/preset-react": "^7.24.7",
     "copyfiles": "^2.4.1",
     "css-loader": "^7.1.2",
-    "style-loader": "^4.0.0"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "date-fns": "^3.6.0",
     "path": "^0.12.7",
-    "react-icons": "^5.2.1"
+    "react": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.93.0",
+    "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3",
+    "react-bootstrap": "^2.10.4"
   }
 }
