--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-react-datetimepicker",
   "description": "",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "homepage": "",
@@ -11,6 +11,7 @@
     "directory": "simple-react-datetimepicker"
   },
   "scripts": {
+    "start": "webpack serve --mode development",
     "build": "babel src -d dist",
     "postbuild": "copyfiles -u 1 src/**/*.css dist"
   },
@@ -34,14 +35,16 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
     "copyfiles": "^2.4.1",
     "css-loader": "^7.1.2",
     "date-fns": "^3.6.0",
     "path": "^0.12.7",
-    "react": "^18.3.1",
     "react-icons": "^5.2.1",
     "style-loader": "^4.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
